--- a/style.css
+++ b/style.css
@@ -2,4 +2,62 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  background-color: #333;
+}
+
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 50px;
+  min-height: 90vh;
+}
+
+.innerContainer {
+  width: 450px;
+  height: 850px;
+  border: 1px red solid;
+  display: grid;
+  grid-template-columns: repeat(4, auto);
+  grid-template-rows: repeat(7, auto);
+  border-radius: 30px;
+  padding-bottom: 15px;
+  background-color: black;
+}
+.btn {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+  border-radius: 50%;
+  border: 1px red solid;
+  margin: 10px;
+}
+.button1 {
+  grid-column: 1/5;
+  border-radius: 0;
+  background-color: black;
+  margin-bottom: 0;
+}
+.button2 {
+  grid-column: 1/5;
+  border-radius: 0;
+  background-color: black;
+  margin-top: 0;
+}
+.button19 {
+  grid-column: 1/3;
+  border-radius: 50px;
+}
+.button6,
+.button10,
+.button14,
+.button18,
+.button21 {
+  background-color: #f69906;
+}
+.button3,
+.button4,
+.button5 {
+  background-color: #9f9f9f;
 }
