--- a/style.css
+++ b/style.css
@@ -1,8 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   background-color: #333;
+  color: #fff;
 }
 
 .container {
@@ -14,12 +17,11 @@
 }
 
 .innerContainer {
-  width: 450px;
+  width: 480px;
   height: 850px;
-  border: 1px red solid;
   display: grid;
-  grid-template-columns: repeat(4, auto);
-  grid-template-rows: repeat(7, auto);
+  grid-template-columns: repeat(4, 120px);
+  grid-template-rows: repeat(7, 120px);
   border-radius: 30px;
   padding-bottom: 15px;
   background-color: black;
@@ -30,24 +32,35 @@
   text-align: center;
   align-items: center;
   border-radius: 50%;
-  border: 1px red solid;
   margin: 10px;
+  font-size: 2.5rem;
+  font-weight: bold;
+  font-family: 'Poppins', sans-serif;
+  cursor: pointer;
+  border: none;
 }
-.button1 {
-  grid-column: 1/5;
-  border-radius: 0;
-  background-color: black;
-  margin-bottom: 0;
-}
+
+.button1,
 .button2 {
   grid-column: 1/5;
   border-radius: 0;
   background-color: black;
-  margin-top: 0;
+  margin-bottom: 0;
+  align-items: flex-end;
+  text-align: end;
+  justify-content: flex-end;
+  margin-right: 20px;
+  font-size: 5rem;
 }
+.button1 {
+  font-size: 2.3rem;
+}
+
 .button19 {
   grid-column: 1/3;
   border-radius: 50px;
+  text-align: start;
+  justify-content: flex-start;
 }
 .button6,
 .button10,
@@ -60,4 +73,46 @@
 .button4,
 .button5 {
   background-color: #9f9f9f;
+  color: black;
+}
+.fa-plus-minus {
+  background-color: #9f9f9f;
+  color: black;
+}
+.fa-divide,
+.fa-xmark {
+  background-color: #f69906;
+}
+.btn19 {
+  margin-left: 40px;
+}
+
+/* hover effect */
+.btn:hover {
+  background-color: rgb(41, 39, 39);
+  color: rgb(196, 188, 188);
+}
+
+.button6:hover,
+.button10:hover,
+.button14:hover,
+.button18:hover,
+.button21:hover {
+  background-color: #b37819;
+  color: rgb(196, 188, 188);
+}
+.button3:hover,
+.button4:hover,
+.button5:hover {
+  background-color: #858080;
+  color: black;
+}
+.button1:hover,
+.button2:hover {
+  background-color: #000;
+  color: #fff;
+}
+.button19:hover > span {
+  background-color: rgb(41, 39, 39);
+  color: rgb(196, 188, 188);
 }
